--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="banner_032" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\032.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ask_me_anything_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ask_me_anything_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
