--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -202,4 +202,13 @@
   <data name="Ask_me_anything_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ask_me_anything_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="avatar_female" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\avatar_female.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="avatar_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\avatar_male.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="starShip" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\starShip.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
